<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SelectGameDifficultyFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/select_difficulty_level"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/gameDifficultyChip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.35"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/easyChip"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/game_difficulty_easy"
            android:textAlignment="center"
            android:textSize="22sp"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/mediumChip"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/game_difficulty_medium"
            android:textAlignment="center"
            android:textSize="22sp"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/hardChip"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/game_difficulty_hard"
            android:textAlignment="center"
            android:textSize="22sp"
            style="@style/Widget.Material3.Chip.Filter"/>

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>